[package]
name = "tcp-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
futures-rustls = "0.26.0"
indicatif = "0.18.4"
owo-colors = "4.3.0"
ping-async = "1.0.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.52.1", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
webpki-roots = "1.0.7"
